# swords-of-the-slain

./: .gitignore  APP_SPEC.md  Dockerfile  README.md  docker-compose.yml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: HUD.tsx  Minimap.tsx  TitleScreen.tsx
frontend/src/components/__tests__/: Minimap.test.tsx  TitleScreen.test.tsx
frontend/src/game/camera/: index.ts  useCamera.ts
frontend/src/game/dungeon/: generator.ts  index.ts
frontend/src/game/dungeon/__tests__/: generator.test.ts
frontend/src/game/fog/: FogOfWarRenderer.tsx  columnRenderer.ts  fogAnimationHelpers.ts  index.ts  los.ts  losUtils.ts  useFogOfWar.ts
frontend/src/game/fog/__tests__/: columnRenderer.test.ts  fogOfWar.test.ts  los.test.ts  transitionMode.test.ts
frontend/src/game/player/: PlayerRenderer.tsx  index.ts  usePlayerMovement.ts
frontend/src/game/tilemap/: TilemapRenderer.tsx  index.ts  mapgen.ts  types.ts
frontend/src/hooks/: useViewportSize.ts
